# spongebobify

./: .gitignore  Justfile  LICENSE.md  README.md  pyproject.toml
.github/workflows/: test.yml
spongebobify/: __main__.py  main.py
tests/: test_cli.py  test_spongebobify.py
