[tool.poetry]
name = "spongebobify"
version = "0.1.0"
description = "Are ya ready kids? aYE AyE! You can now make your text...sARcaStiC!"
authors = ["Michael Gray <mike@graywind.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
spongebobify = "spongebobify.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
bandit = "^1.7.0"
pycodestyle = "^2.7.0"
pydocstyle = "^6.1.1"
pylint = "^2.9.6"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
