[tool.poetry]
name = "spongebobify"
version = "1.0.0"
description = "Are ya ready kids? aYE AyE! You can now make your text...sARcaStiC!"
authors = ["Michael Gray <mike@graywind.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mikejgray/spongebobify"

[tool.poetry.scripts]
spongebobify = "spongebobify.main:main"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.13"
bandit = "^1.9.2"
pytest = "^9.0.2"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
]
ignore = [
    "E722",    # bare-except
    "BLE001",  # blind-except (broad exception catching)
]


[tool.ruff.lint.isort]
lines-after-imports = 2
combine-as-imports = true

[tool.pylint.messages_control]
disable = [
    "W0702",  # bare-except
    "W0718",  # broad-exception-caught
    "C0114",  # missing-module-docstring
    "W0201",  # attribute-defined-outside-init
    "C0415",  # import-outside-toplevel
    "W0212",  # protected-access
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
